<resources>
    <string name="app_name">Redomat</string>

    //LoginActivity
    <string name="loginInputHintEmail">Unesite e-mail</string>
    <string name="loginInputHintPassword">Unesite lozinku</string>
    <string name="loginBtnLogin">Prijava</string>
    <string name="loginBtnEnterALine">Uđite u red</string>
    <string name="loginLinkForgotPassword">Zaboravili ste lozinku</string>
    <string name="loginLinkRegister">Nemate račun?</string>
    <string name="loginErrorEmptyInputs">Unesite e-mail adresu i lozinku</string>

    <string name="loginVertifyEmail">Verificirajte e-mail adresu</string>
    <string name="loginWrongEmailAddress">Neispravna e-mail adresa i/ili lozinka</string>
    //'/'LoginActivity

    //RegisterActivity
    <string name="regInputHintName">Unesite ime</string>
    <string name="regInputHintLastName">Unesite prezime</string>
    <string name="regInputHintEmail">Unesite e-mail</string>
    <string name="regInputHintPassword">Unesite lozinku</string>
    <string name="regBtnRegister">Registriraj se</string>
    <string name="regLinkHaveAnAccount">Imate račun?</string>

    <string name="regInputErrorName">Unesite ime</string>
    <string name="regInputErrorLastName">Unesite prezime</string>
    <string name="regInputErrorEmail">Unesite e-mail adresu</string>
    <string name="regInputErrorEmailValid">Unesite validnu e-mail adresu</string>
    <string name="regInputErrorPassword">Unesite lozinku</string>
    <string name="regInputErrorPasswordLength">Lozinka mora imati najmanje 6 znakova</string>
    <string name="regInputErrorRegistrationFailed">Registracija nije uspijela</string>
    <string name="regErrorEmailExists">Unesena e-mail adresa je već registrirana</string>

    <string name="regInputEmailVertificationSent">E-mail sa verifikacijom je poslan na Vašu e-mail adresu</string>
    //'/'RegisterActivity

    //MainMenuActivity
    <string name="mainMenuNewRedomatArray">Napravite red</string>
    <string name="mainMenuContinueRedomatArray">Nastavite sa redom</string>
    <string name="mainMenuEnterRedomatArray">Uđite u red</string>
    //'/'MainMenuActivity

    //RedomatAdminActivity
    <string name="rdmaAdminTextViewCurrentPosition">Trenutna osoba:</string>
    <string name="rdmaAdminTextViewRedomatLength">Veličina reda:</string>
    <string name="rdmaAdminTextViewRedomatPin">Pin reda:</string>
    <string name="rdmaAdminBtnPause">Pauziraj</string>
    <string name="rdmaAdminBtnNext">Sljedeća osoba</string>
    <string name="rdmaAdminBtnDestroy">Uništi</string>
    <string name="rdmaAdminBtnActivate">Aktiviraj</string>

    <string name="rdmaAdminBtnDestroyTitle">Uništavanje reda?</string>
    <string name="rdmaAdminBtnDestroyMessage">Dali ste sigurni da želite uništiti red?
[Ova akcija se ne može poništiti]</string>
    <string name="rdmaAdminBtnDestroyCancel">Odustani</string>
    //'/'RedomatAdminActivity

    //RedomatUser
    <string name="rdmaUserTextUserPosition">Vaša pozicija:</string>
    <string name="rdmaUserSInfront">Korisnika ispred Vas:</string>
    <string name="rdmaUserAvgTime">Vrijeme do Vas:</string>
    <string name="rdmaUserBtnLeave">Napustite red</string>
    <string name="rdmaUserRedomatStatus">Status reda:</string>
    <string name="rdmaUserRedomatNextPersonTimeDefault">Izračunavanje...</string>
    <string name="rdmaUserRedomatNextPersonLessThanMinLeft">~1 min</string>
    //'/'RedomatUser

    //RedomatUserPausedDialog
    <string name="rdmaUserPasedDialogTitle">Red pauziran do</string>
    //'/'RedomatUserPausedDialog

    //Notifikacije
    <string name="notYouAreUpText">Vi ste na redu.</string>
    //'/'Notifikacije


    //ForgotPasswordDialog
    <string name="frgtPassInputEmail">Unesite e-mail</string>
    <string name="frgtPassBtnConfirm">Potvrdi</string>
    <string name="frgtPassInputErrorEmail">Unesite e-mail adresu</string>
    <string name="frgtPassInputErrorEmailValid">Unesite validnu e-mail adresu</string>
    <string name="frgtPassEmailNotRegistered">Unesena e-mail adresa nije registrirana</string>
    <string name="frgtPassResetPasswordEmailSent">E-mail za resetiranje lozinke je poslan</string>

    <string name="frgtPassDialogForgottenPassword">Zaboravljena lozinka</string>
    <string name="frgtPassDialogMessage">Unesite e-mail adresu za slanje e-mail-a za ponovno postavljanje lozinke.</string>
    <string name="frgtPassDialogCancel">Odustani</string>
    //'/'ForgotPasswordDialog

    //MakeANewRedomatDialog
    <string name="makeANewRedomatInputName">Unesite ime reda</string>
    <string name="makeANewRedomatBtnConfirm">Potvrdi</string>
    <string name="makeANewRedomatCancel">Odustani</string>
    <string name="makeANewRedomatTitle">Kreiranje novog reda</string>
    <string name="makeANewRedomatEnterRedomatName">Morate unjeti ime reda</string>
    //'/'MakeANewRedomatDialog

    //Settings
    <string name="settingsChngNameAndLastnameInputNameHint">Unesite ime</string>
    <string name="settingsChngNameAndLastnameInputLastnameHint">Unesite prezime</string>
    <string name="settingsChngNameAndLastnameBtnChange">Promjeni</string>
    <string name="settingsChngNameAndLastnameTitle">Promjenite ime i prezime</string>
    <string name="settingsChngNameAndLastnameCancel">Odustani</string>
    <string name="settingsChngNameAndLastnameInputErrorEmpty">Polje ne može ostati prazno</string>
    <string name="settingsChngNameAndLastnameDialogTitle">Promjena imena i prezimena</string>
    //'/'Settings

    //EnterRedomat
    <string name="enterRedomatTitle">Uđite u red</string>
    <string name="enterRedomatInputHint">Unesite pin</string>
    <string name="enterRedomatBtnConfirm">Potvrdi</string>
    <string name="enterRedomatInputErrorEmpty">Unesite pin</string>
    <string name="enterRedomatInputErrorNotExists">Pin ne postoji</string>
    <string name="enterRedomatCancel">Odustani</string>
    //'/'EnterRedomat

    //PauseDialog
    <string name="pauseDialogTitle">Pauziranje reda</string>
    <string name="pauseDialogCancel">Odustani</string>
    <string name="pauseDialogError">Došlo je do pogreške</string>
    //'/'PauseDialog

    //StatisticsDialog
    <string name="statDialogNumOfMadeRedomats">Kreiranih redova:</string>
    <string name="statDialogNumOfParticipatedRedoats">Sudjelovanih redova:</string>
    <string name="statDialogNumOfLeftRedomats">Napuštenih redova:</string>
    <string name="statDialogCloseDialog">Napusti</string>
    <string name="statDialogTitle">Statistika korisnika</string>
    <string name="statDialogLoading">Učitavanje...</string>
    //'/'StatisticsDialog

    //OptionsMenuDialog
    <string name="optMenuStatistics">Statistika</string>
    <string name="optMenuSettings">Postavke</string>
    <string name="optMenuLogout">Odjava</string>
    //'/'OptionsMenuDialog

    //ProgressDialog
    <string name="progText">Učitavanje...</string>
    //'/'ProgressDialog

    //AlertDialogLeaveAnArray
    <string name="alrtDialogLeaveTitle">Napustite red?</string>
    <string name="alrtDialogSureYouWantToLeave">Dali ste sigurni da želite napusiti red?</string>
    <string name="alrtDialogLeave">Napusti</string>
    <string name="alrtDialogCancel">Odustani</string>
    //'/'AlertDialogLeaveAnArray

    //HelpingStuffInGeneral
    <string name="errorHasOccured">Došlo je do pogreške</string>
    //'/'HelpingStuffInGeneral


</resources>
