<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/regTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            app:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/regInputHintName"
            android:inputType="textPersonName"
            app:backgroundTint="@color/colorPrimary"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/regInputHintLastName"
            android:inputType="textPersonName"
            app:backgroundTint="@color/colorPrimary"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/regInputHintEmail"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/colorPrimary"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/regInputHintPassword"
            android:inputType="textPassword"
            app:backgroundTint="@color/colorPrimary"
            android:gravity="center"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/regBtnRegister"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regLinkHaveAnAccount"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>