<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="45dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/loginInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/loginInputHintEmail"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/colorPrimary" />

        <EditText
            android:id="@+id/loginInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/loginInputHintPassword"
            android:inputType="textPassword"
            app:backgroundTint="@color/colorPrimary" />

        <Button
            android:id="@+id/loginBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:onClick="@string/loginBtnLogin"
            android:text="@string/loginBtnLogin"
            android:textColor="#ffffff"
            app:backgroundTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/loginLinkForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/loginLinkForgotPassword"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loginBtnEnterALine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/loginBtnEnterALine"
            android:textColor="#ffffff"
            app:backgroundTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/loginLinkRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/loginLinkRegister"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>