<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedomatAdmin"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/rdmaAdminCurrentPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rdmaAdminTextViewCurrentPosition"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/rdmaAdminCurrentPositionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorRed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rdmaAdminRedomatLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rdmaAdminTextViewRedomatLength"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/rdmaAdminRedomatLengthValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorRed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rdmaAdminRedomatPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rdmaAdminTextViewRedomatPin"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/rdmaAdminRedomatPinValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorRed"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/rdmaAdminBtnPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorPrimary"
                android:layout_weight="2"
                android:text="@string/rdmaAdminBtnPause" />

            <Button
                android:id="@+id/rdmaAdminBtnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/rdmaAdminBtnNext"/>
        </LinearLayout>

        <Button
            android:id="@+id/rdmaAdminBtnDestroy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/rdmaAdminBtnDestroy"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimary" />

        <Button
            android:id="@+id/rdmaAdminBtnAddPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add person"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimary"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>