<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statDialogNumOfMadeRedomats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/statDialogNumOfMadeRedomats"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/statDialogNumOfMadeRedomatsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:text="" />



            <TextView
                android:id="@+id/statDialogNumOfParticipatedRedomats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/statDialogNumOfParticipatedRedoats"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statDialogNumOfParticipatedRedomatsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:text="" />



            <TextView
                android:id="@+id/statDialogNumOfLeftRedomats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/statDialogNumOfLeftRedomats"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statDialogNumOfLeftRedomatsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:textSize="15sp"
                android:text="" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>