<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/settingsDialogChangeNameLastnameInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputStuffErrorAppearance"
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settingsDialogChangeNameLastnameInputNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settingsChngNameAndLastnameInputNameHint"
                    android:inputType="text"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/settingsDialogChangeNameLastnameInputLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputStuffErrorAppearance"
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settingsDialogChangeNameLastnameInputLastnameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settingsChngNameAndLastnameInputLastnameHint"
                    android:inputType="text"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/settingsDialogChangeNameLastnameBtnConfrim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/settingsChngNameAndLastnameBtnChange"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorPrimary"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>